<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CiclismoDetalheActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:id="@+id/img_ciclismo_detalhe"
                android:adjustViewBounds="true"
                android:scaleType="fitEnd"
                android:src="@drawable/ciclismo" />

            <TextView
                android:id="@+id/txt_ciclismo_detalhe_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Registrar nova atividade"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_ciclismo_detalhe_distancia"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/activity_detalhe_distancia">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/txt_edit_distancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_ciclismo_detalhe_duracao"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/activity_detalhe_duracao">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/txt_edit_duracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_detalhe_btn_confirmar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/ciclismo_detalhe_btn_confirmar"
                android:textColor="@color/whiteSecondary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>